# LicensePlate

./: .gitignore
LicensePlate/: CMakeLists.txt  Includes.h  LicensePlateDetection.cpp  LicensePlateDetection.h  main.cpp
LicensePlate.xcodeproj/: project.pbxproj
LicensePlate.xcodeproj/xcshareddata/xcschemes/: LicensePlate.xcscheme
